kubernetes/main/apps/database/crunchy-postgres-operator/cluster/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres
spec:
  endpointSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: postgres
      postgres-operator.crunchydata.com/role: master
  ingress:
    # replicas
    - fromEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: replica
      toPorts:
        - ports:
            - port: &port "5432"
              protocol: TCP
            - port: "8008"
              protocol: TCP
    # pgbouncer
    - fromEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: pgbouncer
      toPorts:
        - ports:
            - port: *port
              protocol: TCP
    # apps
    - fromEndpoints:
        - matchLabels:
            egress.home.arpa/postgres-master: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: *port
              protocol: TCP

  egress:
    # replicas
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: replica
      toPorts:
        - ports:
            - port: *port
              protocol: TCP
            - port: "8008"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-database-postgres
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/postgres-master: allow
  egress:
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
            postgres-operator.crunchydata.com/role: master
      toPorts:
        - ports:
            - port: "5432"
              protocol: "TCP"
